# meta_test

./: META  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.ac
.cursor/rules/: brokerd-development.mdc
auxdir/: Makefile.in  x_ac_dtk.m4
contribs/: Makefile.in
contribs/predictor/: README.md  cli_filter.lua  install.sh  predictionTool.lua  updateJobHistory.sh
contribs/pyxis/: Makefile
contribs/sge_wrapper/: Makefile  common_util.h  qacct.c  qacct.h  qconf.c  qconf.h  qdel.c  qdel.h  qhold.c  qhold.h  qmod.c  qmod.h  qstat.c  qstat.h  qsub.c  qsub.h
contribs/sjinfo/: Makefile  aes.c  aes.h  influx_src.c  influx_src.h  json_api.c  json_api.h  list2.c  list2.h  print_json.c  print_json.h  sjaes.c  sjaes.h  sjinfo.c  sjinfo.h  spost.c  sql_api.c  sql_api.h  time_format.c  time_format.h  xstring2.c  xstring2.h
contribs/slurm_completion_help/: slurm_completion.sh
doc/: Broker开发任务清单.md  Broker详细设计文档MVP.md  Broker详细设计文档MVP_new.md  Broker详细设计文档MVP_v2.md  Slurmctld跨域详细设计文档MVP.md  Slurmctld跨域详细设计文档MVP_v2.md  跨域调度MVP整体方案.md  跨域调度详设-差异变更说明.md
doc/checklist1/: broker-M02-config.md  broker-M03-data-persist.md  broker-M04-rpc.md  broker-M05-listener.md  broker-M06-handler-ctld.md  broker-M07-handler-remote.md  broker-M08-egress.md  broker-M09-state-machine.md  broker-M10-stage.md  broker-M11-software.md  broker-M12-rewrite.md  broker-M13-sync-ticker.md  broker-M14-cleanup.md  broker-M15-deploy.md  broker-M16-route-decision.md  broker-M17-smoke.md  ctld-M01-protocol.md  ctld-M02-config.md  ctld-M03-data-schema.md  ctld-M04-forward-thread.md  ctld-M05-inbound-handler.md  ctld-M06-cancel-bridge.md  ctld-M07-sbatch.md  ctld-M08-squeue.md  ctld-M09-scontrol.md  ctld-M10-broker-cleanup.md  ctld-M11-smoke.md  ctld-M12-dbd-sacct.md  ctld-M13-sacctmgr-remote-allowed.md
doc/checklists/: M02-config.md  M03-data-persist.md  M04-rpc.md  M05-listener.md  M06-handler-ctld.md  M07-handler-remote.md  M08-egress.md  M09-state-machine.md  M10-stage.md  M11-software.md  M12-rewrite.md  M13-sync-ticker.md  M14-cleanup.md  ctld-M01-protocol.md  ctld-M02-config.md  ctld-M03-data-schema.md  ctld-M04-forward-thread.md  ctld-M05-inbound-handler.md  ctld-M06-cancel-bridge.md  ctld-M07-sbatch.md  ctld-M08-squeue.md  ctld-M09-scontrol.md  ctld-M10-broker-cleanup.md  ctld-M11-smoke.md
etc/: Makefile.am  cli_filter_apptype.lua.example  lookup_software.sh.example  rpc_queue.yaml.for-high-throughput.example  slurm.conf.for-high-throughput.example  slurm_warning.conf.example  slurmbrokerd.service.in  software_routes.conf.example
slurm/: slurm.h  slurm_errno.h  slurmdb.h
src/: Makefile.am  Makefile.in
src/api/: account_functions.c  allocate.c  assoc_functions.c  config_info.c  init_msg.c  job_info.c  step_launch.c  update_config.c  user_functions.c
src/common/: Makefile.am  Makefile.in  assoc_mgr.c  env.c  env.h  fd.c  fd.h  job_record.c  job_record.h  list.c  list.h  msg_type.c  msg_type.h  pack.c  pack.h  parse_config.c  persist_conn.c  persist_conn.h  pre_process.c  pre_process.h  read_config.c  read_config.h  slurm_errno.c  slurm_opt.c  slurm_opt.h  slurm_protocol_api.c  slurm_protocol_api.h  slurm_protocol_common.h  slurm_protocol_defs.c  slurm_protocol_defs.h  slurm_protocol_pack.c  slurm_protocol_util.c  slurmdb_defs.c  slurmdb_pack.c  slurmdbd_defs.c  slurmdbd_defs.h  slurmdbd_pack.c  stepd_api.c
src/database/: kingbase_common.c  mysql_common.c
src/interfaces/: accounting_storage.c  accounting_storage.h  acct_gather.c  acct_gather.h  acct_gather_profile.c  cred.c  (+10 more)
src/plugins/gpu/dtk/: Makefile.am  Makefile.in  gpu_dtk.c
src/slurmbrokerd/: Makefile.am  Makefile.in  broker_conf.c  broker_conf.h  broker_job.c  broker_job.h  egress.c  egress.h  handler_ctld.c  handler_ctld.h  handler_remote.c  handler_remote.h  inject_broker_forward.c  listener.c  listener.h  persist.c  persist.h  proto.c  proto.h  proto_pack.c  rewrite.c  rewrite.h  slurmbrokerd.c  slurmbrokerd.h  software.c  software.h  stage.c  stage.h  state_machine.c  state_machine.h  sync_ticker.c  sync_ticker.h  user_mapping.c  user_mapping.h  util_exec.c  util_exec.h
(+139 files in other folders)
